@@ -93,6 +93,15 @@ public @interface Test {
   public String dataProvider() default "";
   
   /**
+   * The class where to look for the data provider.  If not
+   * specified, the dataprovider will be looked on the class
+   * of the current test method or one of its base classes.
+   * If this attribute is specified, the data provider method
+   * needs to be static on the specified class.
+   */
+  public Class dataProviderClass() default Object.class;
+  
+  /**
    * If set to true, this test method will always be run even if it depends
    * on a method that failed.  This attribute will be ignored if this test
    * doesn't depend on any method or group.
