@@ -166,7 +166,9 @@ public class Parameters {
     if (null != annotation) {
       String dataProviderName = annotation.getDataProvider();
       if (null != dataProviderName && ! "".equals(dataProviderName)) {
-        result = findDataProvider(clazz, finder, dataProviderName);
+        result = 
+          findDataProvider(clazz, finder, dataProviderName,
+              annotation.getDataProviderClass());
         if (null != result) {
           return result;
         }
@@ -205,7 +207,13 @@ public class Parameters {
   /**
    * Find a method that has a @DataProvider(name=name)
    */
-  private static Method findDataProvider(Class cls, IAnnotationFinder finder, String name) {
+  private static Method findDataProvider(Class cls, 
+    IAnnotationFinder finder, String name, Class dataProviderClass) 
+  {
+    if (dataProviderClass != null) {
+      cls = dataProviderClass;
+    }
+
     for (Method m : ClassHelper.getAvailableMethods(cls)) {
       IDataProvider dp = (IDataProvider) finder.findAnnotation(m, IDataProvider.class);
       if (null != dp && dp.getName().equals(name)) {
