@@ -5,7 +5,7 @@ thread-count="2" annotations="javadoc">
 
  <test name="Regression2">
   <classes>
-      <class name="test.annotationtransformer.AnnotationTransformerTest" />
+    <class name="test.dataprovider.StaticDataProviderSampleTest" />
   </classes>
  </test>
 
